
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;


 int payload ;
 int restored_rbp ;
 int restored_rsp ;
 int saved_esp ;
 int saved_rbp_hi ;
 int saved_rbp_lo ;

__attribute__((used)) static __attribute__((unused)) void wrapper(void)
{

  __asm__ volatile( "userland_entry:" :: );


  restored_rbp = ((saved_rbp_hi << 32) | saved_rbp_lo);
  restored_rsp = ((saved_rbp_hi << 32) | saved_esp);

  __asm__ volatile( "movq %0, %%rax\n"
                    "movq %%rax, %%rbp\n"
                    :: "m"(restored_rbp) );

  __asm__ volatile( "movq %0, %%rax\n"
                    "movq %%rax, %%rsp\n"
                    :: "m"(restored_rsp) );

  uint64_t ptr = (uint64_t) &payload;
  __asm__ volatile( "movq %0, %%rax\n"
                    "call *%%rax\n"
                    :: "m"(ptr) );


  __asm__ volatile( "movq $5555, %%rax\n"
                    :: );


  __asm__ volatile( "ret" :: );
}
